fix: query of note
