# collab-service/internal/docs/swagger.yaml
@@ -14,6 +14,18 @@ definitions:
     required:
     - userId
     type: object
+  dto.CreateNoteDTO:
+    properties:
+      body:
+        type: string
+      folder_id:
+        type: string
+      title:
+        type: string
+    required:
+    - folder_id
+    - title
+    type: object
   dto.CreateTeamInput:
     properties:
       managers:
@@ -56,19 +68,6 @@ definitions:
     - memberId
     - memberName
     type: object
-  dto.NoteDTO:
-    properties:
-      body:
-        type: string
-      folder_id:
-        type: string
-      title:
-        type: string
-    required:
-    - body
-    - folder_id
-    - title
-    type: object
   dto.ShareDTO:
     properties:
       accessRole:
@@ -78,6 +77,15 @@ definitions:
     required:
     - accessRole
     - userId
+    type: object
+  dto.UpdateNoteDTO:
+    properties:
+      body:
+        type: string
+      folder_id:
+        type: string
+      title:
+        type: string
     type: object
   models.AccessRole:
     enum:
@@ -123,6 +131,26 @@ info:
   version: "1.0"
 paths:
   /folders:
+    get:
+      description: Retrieve all folders owned by the authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of folders
+          schema:
+            items:
+              $ref: '#/definitions/models.Folder'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get all folders
+      tags:
+      - folders
     post:
       consumes:
       - application/json
@@ -313,6 +341,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Share folder with user
       tags:
       - folders
@@ -353,10 +383,35 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Revoke shared folder access
       tags:
       - folders
   /notes:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of notes
+          schema:
+            items:
+              $ref: '#/definitions/models.Note'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            type: object
+        "403":
+          description: Forbidden
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get all notes
+      tags:
+      - notes
     post:
       consumes:
       - application/json
@@ -367,7 +422,7 @@ paths:
         name: note
         required: true
         schema:
-          $ref: '#/definitions/dto.NoteDTO'
+          $ref: '#/definitions/dto.CreateNoteDTO'
       produces:
       - application/json
       responses:
@@ -469,7 +524,7 @@ paths:
         name: note
         required: true
         schema:
-          $ref: '#/definitions/dto.NoteDTO'
+          $ref: '#/definitions/dto.UpdateNoteDTO'
       produces:
       - application/json
       responses:
@@ -538,6 +593,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Share a note with another user
       tags:
       - notes
@@ -578,6 +635,8 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - BearerAuth: []
       summary: Revoke note sharing
       tags:
       - notes
